# minimal_perfect_hash

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: million_build.rs
src/: bdz.rs  builder.rs  cpu.rs  hash.rs  lib.rs  util.rs
