[package]
name = "minimal_perfect_hash"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Fast minimal perfect hashing (PT-style): per-bucket seeds, deterministic build, O(1) lookups."
repository = "https://github.com/ARyaskov/minimal_perfect_hash"
homepage = "https://github.com/ARyaskov/minimal_perfect_hash"
documentation = "https://docs.rs/minimal_perfect_hash"
readme = "README.md"
keywords = ["mph", "hashing", "perfect-hash", "index", "pt"]
categories = ["data-structures", "algorithms"]

[features]
default = ["serde", "simd", "parallel"]
serde = ["dep:serde", "dep:bincode"]
simd = []
parallel = ["dep:rayon"]
avx512 = ["simd"]
unsafe_optimizations = []

[dependencies]
xxhash-rust = { version = "0.8", features = ["xxh3"] }
thiserror = "1"
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "1", optional = true }
rayon = { version = "1.8", optional = true }
wyhash = { version = "0.6"}
hashbrown = "0.14"
ahash = "0.8"
rand = "0.8"

[dev-dependencies]
rand = "0.8"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
debug-assertions = false

[profile.bench]
inherits = "release"
debug = true

[profile.release-extreme]
inherits = "release"
opt-level = "z"
lto = "fat"
strip = true
overflow-checks = false

[profile.profiling]
inherits = "release"
debug = 1
overflow-checks = false
lto = "thin"

[[example]]
name = "million_build"
required-features = ["simd", "parallel"]
